[package]
name = "cybergrind-ui"
version = "0.1.0"
authors = ["mcpar-land"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cybergrind-core = { path = "../cybergrind-core" }
bevy = "0.5.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git", branch = "main" }
bevy_mod_picking = { git = "https://github.com/mcpar-land/bevy_mod_picking.git", branch = "0.4.0" }
bevy_prototype_debug_lines = "0.3.3"